--- a/lly-example/pom.xml
+++ b/lly-example/pom.xml
@@ -17,8 +17,20 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>${junit.version}</version>
       <scope>test</scope>
+    </dependency>
+    
+    <dependency>
+      <groupId>lly.framework</groupId>
+      <artifactId>lly-integration</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    
+    <dependency>
+      <groupId>lly.framework</groupId>
+      <artifactId>lly-core</artifactId>
+      <version>${project.parent.version}</version>
     </dependency>
   </dependencies>
 </project>
