--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <properties>
         <junit.version>4.11</junit.version>
         <spring.version>3.2.12.RELEASE</spring.version>
+        <dubbo.version>12.5.4-SNAPSHOT</dubbo.version>
     </properties>
 
     <dependencies>
