--- a/lly-common/pom.xml
+++ b/lly-common/pom.xml
@@ -44,5 +44,10 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.9.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.2.6</version>
+        </dependency>
     </dependencies>
 </project>
